--- a/rocka-chat/imports/client/layouts/layoutApp/layoutApp.html
+++ b/rocka-chat/imports/client/layouts/layoutApp/layoutApp.html
@@ -1,7 +1,5 @@
 <template name="layoutApp">
- 	<p>Header App</p>
-
-	{{>Template.dynamic template=content}}
-
-	<p>Footer App</p>
+	<div class="layout-app page-brand">
+    	{{>Template.dynamic template=content}}
+	</div>
 </template>
