--- a/rocka-chat/imports/client/templates/account/login/login.html
+++ b/rocka-chat/imports/client/templates/account/login/login.html
@@ -1,3 +1,61 @@
 <template name="login">
-	<p>Login Content</p>
+	<main class="content">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4 col-lg-push-4 col-sm-6 col-sm-push-3">
+					<section class="content-inner">
+						<div class="card">
+							<div class="card-main">
+								<div class="card-header">
+									<div class="card-inner">
+										<h1 class="card-heading">Login</h1>
+									</div>
+								</div>
+								<div class="card-inner">
+									<p class="text-center">
+										<span class="avatar avatar-inline avatar-lg">
+											<img alt="Login" src="/daemonite/images/users/avatar-001.jpg">
+										</span>
+									</p>
+
+									<form class="form" id="loginForm">
+										<div class="form-group form-group-label">
+											<div class="row">
+												<div class="col-md-10 col-md-push-1">
+													<label class="floating-label" for="username">Username</label>
+													<input class="form-control" id="username" type="text">
+												</div>
+											</div>
+										</div>
+										<div class="form-group form-group-label">
+											<div class="row">
+												<div class="col-md-10 col-md-push-1">
+													<label class="floating-label" for="password">Password</label>
+													<input class="form-control" id="password" type="password">
+												</div>
+											</div>
+										</div>
+										<div class="form-group">
+											<div class="row">
+												<div class="col-md-10 col-md-push-1">
+													<button class="btn btn-block btn-brand waves-attach waves-light">Sign In</button>
+												</div>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+						<div class="clearfix">
+							<p class="margin-no-top pull-right">
+								<a class="btn btn-flat btn-brand waves-attach" href="{{ pathFor 'account.register' }}">
+									Create an account
+								</a>
+							</p>
+						</div>
+					</section>
+				</div>
+			</div>
+		</div>
+	</main>
 </template>
