Step 06: User login

--- a/rocka-chat/imports/client/templates/account/login/login.html
+++ b/rocka-chat/imports/client/templates/account/login/login.html
@@ -19,11 +19,21 @@
 									</p>
 
 									<form class="form" id="loginForm">
+										{{#if errors.form }}
+											<div class="row">
+												<div class="col-md-10 col-md-push-1">
+													<p class="text-red">{{ errors.form }}</p>
+												</div>
+											</div>
+										{{/if}}
 										<div class="form-group form-group-label">
 											<div class="row">
 												<div class="col-md-10 col-md-push-1">
 													<label class="floating-label" for="username">Username</label>
 													<input class="form-control" id="username" type="text">
+													{{#if errors.username }}
+														<p class="text-red">{{ errors.username }}</p>
+													{{/if}}
 												</div>
 											</div>
 										</div>
@@ -32,6 +42,9 @@
 												<div class="col-md-10 col-md-push-1">
 													<label class="floating-label" for="password">Password</label>
 													<input class="form-control" id="password" type="password">
+													{{#if errors.password }}
+														<p class="text-red">{{ errors.password }}</p>
+													{{/if}}
 												</div>
 											</div>
 										</div>
@@ -58,4 +71,5 @@
 			</div>
 		</div>
 	</main>
+
 </template>
